# bootcamp_python

./: .flake8  arquivo.csv  etl.py  exemplo.ipynb  exemplo.py  exemplo_csv.py  pyproject.toml
