[project]
name = "bootcamp-python"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "pre-commit (>=4.1.0,<5.0.0)",
    "black (>=24.10.0,<25.0.0)",
    "flake8 (>=7.1.1,<8.0.0)",
    "isort (>=5.13.2,<6.0.0)",
    "taskipy (>=1.14.1,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
